...
        super.viewDidLoad()
        self.cache = NSCache()
        
        collectionView.delegate = self
        collectionView.dataSource =  self
        
        self.navigationController?.navigationBar.topItem?.title = "NY Times"
        
        
        let cellWidth : CGFloat = UIScreen.main.bounds.size.width
        let cellheight : CGFloat = UIScreen.main.bounds.size.width * (3/4)
        let cellSize = CGSize(width: cellWidth , height:cellheight)
        
...
        
        
        searchController.searchBar.barTintColor = UIColor.white
        searchController.searchBar.tintColor = UIColor.red
        searchController.hidesNavigationBarDuringPresentation = false
        searchController.dimsBackgroundDuringPresentation = false
        searchController.searchBar.placeholder  = "Keyword"
    }
    
    
    //MARK: UICollectionViewDelegate
    
    
...
